# Kalman_Filter

./: .gitignore  README.md
cpp/: CMakeLists.txt  kalman_sim.cpp  kalman_sim_gui.cpp  main_sim_RLS.cpp  vcpkg-configuration.json  vcpkg.json
cpp/include/: Kalman_RLS.hpp  kalman_filter.hpp
cpp/results/: kalman_results.csv
cpp/src/: Kalman_RLS.cpp  kalman_filter.cpp
python/: requirements.txt
python/scripts/: Kalman_RLS.py  kalman_filter.py  kalman_simulation.ipynb
python/utils/: plot_kalman_results.py
